# aabw-project

./: .env.example  .gitignore  .npmrc  AGENTS.md  HANDOFF_PROMPT.md  README.md  design-qa.md  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: layout.jsx  page.jsx
app/api/bank-intelligence/: route.js
app/api/check-evidence/: route.js
app/bank/: page.jsx
data_module/: __init__.py  config.py  db.py  orchestrator.py  ui.py  worker.py  ytd_backfill.py
data_module/pipeline/: __init__.py  analytics.py  groq.py  normalization.py  openai_analysis.py  query_planner.py  serpapi.py  tinyfish.py
outputs/: checkvar-2-decorative-pitch-deck.pptx.inspect.ndjson  checkvar-2-pitch-deck.pptx  checkvar-2-pitch-deck.pptx.inspect.ndjson
src/: App.jsx  BankCharts.jsx  BankReport.jsx  CampaignGraph.jsx  ScamConstellation.jsx  ScamNetwork3D.jsx  SignalWave.jsx  SocialListeningGraph.jsx  Strands.css  Strands.jsx  bankMockData.js  campaignCheckResult.js  socialGraphModel.js  styles.css
src/server/: bank-intelligence.js  campaign-check.js  check-evidence.js  qr-decode.js
src/types/: check-api.d.ts
supabase/: analytics_extension.sql  campaign_clustering_guardrails.sql  campaign_readiness.sql  schema.sql
tests/: bank-intelligence.test.mjs  campaign-check-result.test.mjs  campaign-check.test.mjs  check-evidence.test.mjs  social-graph-model.test.mjs  test_analytics.py  test_campaign_materialization.py  test_config.py  test_db.py  test_openai_analysis.py  test_orchestrator.py  test_pipeline_utils.py  test_providers.py  test_serpapi.py  test_ytd_backfill.py
(+2 files in other folders)
